<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="detail_name">DetailView</string>
    <string name="title_activity_detail">Detail</string>
    <string name="setting">Setting</string>
    <string name="pref_sync">Set location zip code.</string>
    <string name="pref_sync_summ">pref_sync_summ</string>
    <string name="pref_syncConnectionType">Set metric</string>
    <string name="pref_syncConnectionTypes_default">Celsius</string>
    <string name="pref_location_label">Location</string>
    <string name="pref_location_key">location</string>
    <string name="pref_location_default">94043</string>
    <string name="action_share">share</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_units_key">Temperature Units</string>
    <string name="pref_units_metric">metric</string>
    <string name="pref_units_imperial">imperial</string>


    <array name="pref_units_options">
        <item>Metric</item>
        <item>Imperial</item>
    </array>
    <array name="pref_units_values">
        <item>metric</item>
        <item>imperial</item>
    </array>

    <array name="pref_city_name">
        <item>XiaMen</item>
        <item>FuZhou</item>
        <item>QuanZhou</item>
        <item>ZhangZhou</item>
    </array>

    <array name="pref_city_id">
        <item>id=1790645</item>
        <item>id=1810821</item>
        <item>id=1797353</item>
        <item>id=1785018</item>
    </array>

    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="format_full_friendly_date"><xliff:g id="day_of_week">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>
    <string name="format_wind_mph">    Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g></string>
    <string name="format_wind_kmh">    Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g></string>
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>
    <string name="title_activity_temp">temp</string>
    <!-- Notification Format -->
    <string name="format_notification">
    Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>

    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Weather Notifications</string>

    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>
    <string name="pref_city_key">city name</string>
    <string name="pref_city_title">city</string>
    <string name="pref_city_default">id=1790645</string>
    <string name="pref_city_dialog_title">Choose city</string>

</resources>
