<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:key="@string/pref_location_key"
        android:title="@string/pref_location_label"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true"/>
    <ListPreference
        android:key="@string/pref_city_key"
        android:title="@string/pref_city_title"
        android:dialogTitle="@string/pref_city_dialog_title"
        android:entries="@array/pref_city_name"
        android:entryValues="@array/pref_city_id"
        android:defaultValue="@string/pref_city_default"/>

    <ListPreference
        android:key="@string/pref_units_key"
        android:title="@string/pref_units_key"
        android:dialogTitle="@string/pref_syncConnectionType"
        android:entries="@array/pref_units_options"
        android:entryValues="@array/pref_units_values"
        android:defaultValue="@string/pref_units_metric" />
    <CheckBoxPreference
        android:key="@string/pref_enable_notifications_key"
        android:title="@string/pref_enable_notifications_label"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:defaultValue="@string/pref_enable_notifications_default"/>
</PreferenceScreen>
